fix (side navigation): correct divider display

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/nav-menu/nav-menu.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/nav-menu/nav-menu.component.scss
@@ -1,5 +1,9 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
+:host {
+  display: contents;
+}
+
 .nav-menu-container {
   width: 100%;
   display: flex;
