--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.html
@@ -83,6 +83,9 @@
                 [badge]="item.badge"
                 (click)="handleItemClick(item.id || item.label)"></rte-nav-item>
             </li>
+            @if (item.showDivider) {
+              <rte-divider [appearance]="dividerAppearance()" />
+            }
           }
         }
       </ul>
