--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
@@ -29,6 +29,10 @@
     &.brand {
         border-top-color: var(--border-brand-default);
     }
+
+    &.brand-navigation {
+        border-top-color: var(--border-brand-navigation-divider);
+    }
 }
 
 .vertical {
@@ -59,5 +63,9 @@
 
     &.brand {
         background-color: var(--border-brand-default);
+    }
+
+    &.brand-navigation {
+        background-color: var(--border-brand-navigation-divider);
     }
 }
