--- a/preview/sidenav-design-dev/angular/components/side-nav/nav-menu/nav-menu.component.scss
+++ b/preview/sidenav-design-dev/angular/components/side-nav/nav-menu/nav-menu.component.scss
@@ -1,5 +1,9 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
+:host {
+  display: contents;
+}
+
 .nav-menu-container {
   width: 100%;
   display: flex;
