fix (divider): correct horizontal display

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/side-nav.component.html
@@ -47,7 +47,7 @@
           <span>{{ headerConfig()?.version }}</span>
         </div>
       </div>
-      <rte-divider [appearance]="dividerAppearance()"></rte-divider>
+      <rte-divider [appearance]="dividerAppearance()"/>
     </div>
   </div>
   <div side-nav-body>
@@ -135,7 +135,7 @@
             </ul>
           </div>
         }
-        <rte-divider [appearance]="dividerAppearance()"></rte-divider>
+        <rte-divider [appearance]="dividerAppearance()"/>
         @if (collapsible()) {
           <div class="side-nav-footer">
             <div class="collapsible-section">
