--- a/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/divider/divider.component.scss
@@ -1,5 +1,9 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
+:host {
+    display: contents;
+}
+
 .horizontal {
     border: none;
     padding: 0;
