fix (side navigation): show icons inside menus correctly

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/nav-menu/nav-menu.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/side-nav/nav-menu/nav-menu.component.html
@@ -97,7 +97,7 @@
               [id]="item.id"
               [label]="item.label"
               [icon]="item.icon"
-              [showIcon]="item.showIcon!"
+              [showIcon]="item.showIcon ?? true"
               [collapsed]="collapsed()"
               [link]="item.link"
               [items]="item.items || []"
@@ -117,7 +117,7 @@
                 [id]="item.id"
                 [label]="item.label"
                 [icon]="item.icon"
-                [showIcon]="item.showIcon!"
+                [showIcon]="item.showIcon ?? true"
                 [collapsed]="collapsed()"
                 [link]="item.link"
                 [isNested]="true"
