feat (card): add focus ring for keyboard selection

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
@@ -3,6 +3,7 @@
   [style.width]="cardWidth()"
   [attr.disabled]="disabled()"
   [ngClass]="{'clickable': clickable()}"
+  [tabIndex]="tabIndex()"
   (click)="onClick()"
 >
   <ng-content/>
