--- a/packages/react/src/components/card/Card.module.scss
+++ b/packages/react/src/components/card/Card.module.scss
@@ -8,7 +8,7 @@
     align-self: stretch;
     border-radius: $radius-s;
     @include elevation-neutral-shadow-2;
-    transition: all 300ms;
+    transition: background-color 300ms, box-shadow 300ms;
 
     &:hover {
         @include elevation-neutral-shadow-3;
@@ -33,5 +33,10 @@
 
     &[data-clickable='true'] {
         cursor: pointer;
+    }
+
+    &:focus-visible {
+        outline: $width-xs solid var(--border-brand-focused);
+        outline-offset: $width-m;
     }
 }
