--- a/preview/dsr-188/angular/components/card/card.component.html
+++ b/preview/dsr-188/angular/components/card/card.component.html
@@ -3,6 +3,7 @@
   [style.width]="cardWidth()"
   [attr.disabled]="disabled()"
   [ngClass]="{'clickable': clickable()}"
+  [tabIndex]="tabIndex()"
   (click)="onClick()"
 >
   <ng-content/>
