refactor (card): change clickable property for selectable

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
@@ -2,7 +2,7 @@
   class="card card-{{cardType()}}"
   [style.width]="cardWidth()"
   [attr.disabled]="disabled()"
-  [ngClass]="{'clickable': clickable()}"
+  [ngClass]="{'selectable': selectable()}"
   [tabIndex]="tabIndex()"
   (click)="onClick()"
 >
