--- a/packages/react/src/components/card/Card.module.scss
+++ b/packages/react/src/components/card/Card.module.scss
@@ -31,7 +31,7 @@
         box-shadow: none;
     }
 
-    &[data-clickable='true'] {
+    &[data-selectable='true'] {
         cursor: pointer;
     }
 
