fix (card): add accesibility options

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
@@ -2,6 +2,9 @@
   class="card card-{{cardType()}}"
   [style.width]="cardWidth()"
   [attr.disabled]="disabled()"
+  [attr.aria-label]="ariaLabel()"
+  [attr.aria-labelledby]="ariaLabelledby()"
+  [attr.aria-role]="ariaRole()"
   [ngClass]="{'selectable': selectable()}"
   [tabIndex]="tabIndex()"
   (click)="onClick()"
