--- a/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
@@ -5,7 +5,7 @@
   [attr.aria-label]="ariaLabel()"
   [attr.aria-labelledby]="ariaLabelledby()"
   [attr.aria-role]="ariaRole()"
-  [ngClass]="{'selectable': selectable()}"
+  [ngClass]="{'clickable': clickable()}"
   [tabIndex]="tabIndex()"
   (click)="onClick()"
 >
