--- a/preview/dsr-188/angular/components/card/card.component.html
+++ b/preview/dsr-188/angular/components/card/card.component.html
@@ -2,6 +2,9 @@
   class="card card-{{cardType()}}"
   [style.width]="cardWidth()"
   [attr.disabled]="disabled()"
+  [attr.aria-label]="ariaLabel()"
+  [attr.aria-labelledby]="ariaLabelledby()"
+  [attr.aria-role]="ariaRole()"
   [ngClass]="{'clickable': clickable()}"
   [tabIndex]="tabIndex()"
   (click)="onClick()"
