chore (card): add card to public api of packages and test in apps

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -7,6 +7,14 @@
   (itemClicked)="handleItemClick($event)"
 >
   <div content>
+    <rte-card>
+      <div style="padding: 16px;">
+        <h4 style="margin: 0 0 12px 0; font-size: 18px; font-weight: 600;">Default Card</h4>
+        <p style="margin: 0; color: #666; line-height: 1.5;">
+          This is a default card with medium size. It uses elevation shadow styling.
+        </p>
+      </div>
+    </rte-card>
     <rte-banner
       type="default"
       message="This is an info banner"
