--- a/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/card/card.component.html
@@ -8,6 +8,7 @@
   [ngClass]="{'clickable': clickable()}"
   [tabIndex]="tabIndex()"
   (click)="onClick()"
+  (keydown)="onKeyDown($event)"
 >
   <ng-content/>
 </div>
