--- a/preview/dsr-188/angular/components/card/card.component.html
+++ b/preview/dsr-188/angular/components/card/card.component.html
@@ -8,6 +8,7 @@
   [ngClass]="{'clickable': clickable()}"
   [tabIndex]="tabIndex()"
   (click)="onClick()"
+  (keydown)="onKeyDown($event)"
 >
   <ng-content/>
 </div>
